# hammer-down

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
extlibs/: CMakeLists.txt
include/HammerDown/: HammerDown.h
source/: CMakeLists.txt  HammerDown.cpp  main.cpp
source/modules/: CMakeLists.txt  SignatureDetector.cpp  SignatureDetector.h
source/utils/: AntiInjectionUtils.cpp  AntiInjectionUtils.h  CMakeLists.txt
tests/: CMakeLists.txt  MainTest.cpp
